--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </head>
 
 <body>
-<div class="col-sm-4"></div>
+<div class="col-sm-4">
+    <h1>Rochelle Simpson's Senior Project Files</h1>
+</div>
+    
 <div class="col-sm-8">
-<h2>Rochelle Simpson's Senior Project Files</h2>
-
     <p>Listed here are my homeworks for the first quarter of Senior Project, CS 460. This page shall continue to grow as I do further work for the future projects and editions of this course. </p>
 
     <h2>About the Creator</h2>
@@ -18,7 +19,8 @@
     <h2>The Assignments</h2>
 
     <dl>
-        <dd> <a href="HW1/index_aoe.html"> Homework 1 - FINISHED </a></dd>
+        <dd> <a href="HW1/index_aoe.html"> Homework 1</a> : Created a small website for a fictional company that makes stone trees.</dd>
+        <dd> <strong> Skills: </strong> CSS, Javascript & HTML</dd>
         <dd> <a href="tba"> Homework 2 </a></dd>
         <dd> <a href="tba"> Homework 3 </a></dd>
         <dd> <a href="tba"> Homework 4 </a></dd>
