--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 </head>
 
 <body>
-<div id="col-sm-4">
+<div class = "container-fluid">
+<div class="col-sm-4">
     <h1>Rochelle Simpson's Senior Project Files</h1>
 </div>
     
-<div id="col-sm-8">
+<div class="col-sm-8">
     <p>Listed here are my homeworks for the first quarter of Senior Project, CS 460. This page shall continue to grow as I do further work for the future projects and editions of this course. </p>
 
     <h2>About the Creator</h2>
@@ -26,6 +27,6 @@
         <dd> <a href="tba"> Homework 4 </a></dd>
         <dd> <a href="tba"> Homework 5 </a></dd>
     </dl>
-    
+    </div>  
 </div>
 </body>
