--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 
 <body>
-<div class = "container-fluid">
-<div class="col">
+<div class = "row">
+<div class="col-md-4">
     <h1>Rochelle Simpson's</h1> 
-    <h3>Senior Project Files</h3>
+    <small>Senior Project Files</small>
 </div>
     
-<div class="col">
+<div class="col-md-8">
     <p>Listed here are my homeworks for the first quarter of Senior Project, CS 460. This page shall continue to grow as I do further work for the future projects and editions of this course. </p>
 
     <h2>About the Creator</h2>
