--- a/contact_aoe.html
+++ b/contact_aoe.html
@@ -42,9 +42,13 @@
         </div>
 
         <div class= "col-sm-4"  id="content">
-            <p>Please no recruiters or soliscitations!</p>
-            <p>Those looking for 24 hour assistance may also use our Question form below which is delivered 
-            directly to the company's customer support advisor who will see to your needs as promptly as possible.</div>
+	<ol>
+            <li>Please no recruiters or soliscitations!</li>
+            <li>Those looking for 24 hour assistance may also use our Question form below which is delivered 
+            directly to the company's customer support advisor who will see to your needs as promptly as possible.</li>
+	    <li>Original peices may take up to a month to craft, please keep that in mind when placing orders.</li>
+	</ol>
+	</div>
 
         <br>
         </div>
