--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     <h2>The Assignments</h2>
 
     <dl>
-        <dd> <a href="HW1/index_aoe.html"> Homework 1</a> : Created a small website for a fictional company that makes stone trees.</dd>
+        <dt> Homework 1 : Created a small website for a fictional company that makes stone trees.</dt>
         <dd> <strong> Skills: </strong> CSS, Javascript & HTML</dd>
-        <dd> <a href="tba"> Homework 2 </a></dd>
-        <dd> <a href="tba"> Homework 3 </a></dd>
-        <dd> <a href="tba"> Homework 4 </a></dd>
-        <dd> <a href="tba"> Homework 5 </a></dd>
+        <dd> Information Page: <a href="HW1/index.html"> >>LINK<< </a></dd>
+        <dd> Website: <a href="HW1/index_aoe.html"> >>LINK<< </a></dd>
+        <dt> <a href="tba"> Homework 2 </a></dt>
+        <dt> <a href="tba"> Homework 3 </a></dt>
+        <dt> <a href="tba"> Homework 4 </a></dt>
+        <dt> <a href="tba"> Homework 5 </a></dt>
     </dl>
     </div>  
 </div>
