--- a/about_aoe.html
+++ b/about_aoe.html
@@ -57,9 +57,7 @@
                 <dt><p><strong>THANK YOU SO MUCH!</strong></p></dt>
                 <dd><p><em>Ember Johnson</em></p></dd>
                 <dd><p>&#8224;&#8224;&#8224;&#8224; [June 1rst 2013]</p></dd>
-                <dd><p><em>Robin created a fantastic dreamcatcher for me </em></p></dd>
-		<dd> <p><em>and I haven't slept this well in years! What's more </em></p></dd>
-		<dd> <p><em>she even offered to teach me to design my own!</em></p></dd>
+                <dd><p><em>Robin created a fantastic dreamcatcher ...</em></p></dd>
                 <dd>&nbsp;</dd>
             </dl>
         </div>
@@ -69,10 +67,7 @@
                 <dd><p><strong>WELL MADE</strong></dd>
                 <dd><p><em>Aaron Speer</em></p></dd>
                 <dd><p>&#8224;&#8224;&#8224; [May 21rst 2013]</p></dd>
-                <dd><p><em>Typically people use glass or cheap stones, </em></p></dd>
-		<dd> <p><em>but Robin actually gets the real stuff. I </em></p></dd>
-		<dd><p><em> apprecaite the fact tha quality matters when she </em></p></dd>
-		<dd> <p><em>does her work.</em></p></dd>
+                <dd><p><em>Typically people use glass or cheap stones... </em></p></dd>
                 <dd>&nbsp;</dd>
             </dl>
         </div>
@@ -82,10 +77,7 @@
                 <dd><p><strong>AFFORDABLE</strong></p></dd>
                 <dd><em><p>Brian Marques</em></p></dd>
                 <dd><p>&#8224;&#8224;&#8224;&#8224; [March 5th 2013]</p></dd>
-                <dd><p><em>For a person with low income the cost of </em></p></dd>
-		<dd><p><em>things matters. I get that supplies cost money </em></p></dd>
-		<dd><p><em> but its nice to find a place that can give you </em></p></dd>
-		<dd><p><em> real stuff without costing a limb.</em></p></dd>
+                <dd><p><em>For a person with low income the cost of ... </em></p></dd>
                 <dd>&nbsp;</dd>
             </dl>
         </div>
