--- a/HW1/about_aoe.html
+++ b/HW1/about_aoe.html
@@ -57,8 +57,7 @@
                 <dt><p><strong>THANK YOU SO MUCH!</strong></p></dt>
                 <dd><p><em>Ember Johnson</em></p></dd>
                 <dd><p>&#8224;&#8224;&#8224;&#8224; [June 1rst 2013]</p></dd>
-                <dd><p><em>Robin created a fantastic dreamcatcher for me and I haven't slept this well 
-                in years! What's more she even offered to teach me to design my own!</em></p></dd>
+                <dd><p><em>Robin created a fantastic dreamcatcher ...</em></p></dd>
                 <dd>&nbsp;</dd>
             </dl>
         </div>
@@ -68,8 +67,7 @@
                 <dd><p><strong>WELL MADE</strong></dd>
                 <dd><p><em>Aaron Speer</em></p></dd>
                 <dd><p>&#8224;&#8224;&#8224; [May 21rst 2013]</p></dd>
-                <dd><p><em>Typically people use glass or cheap stones, but Robin actually gets the real 
-                stuff. I apprecaite the fact tha quality matters   when she does her work.</em></p></dd>
+                <dd><p><em>Typically people use glass or cheap stones...</em></p></dd>
                 <dd>&nbsp;</dd>
             </dl>
         </div>
@@ -79,8 +77,7 @@
                 <dd><p><strong>AFFORDABLE</strong></p></dd>
                 <dd><em><p>Brian Marques</em></p></dd>
                 <dd><p>&#8224;&#8224;&#8224;&#8224; [March 5th 2013]</p></dd>
-                <dd><p><em>For a person with low income the cost of things matters. I get that supplies cost
-                money but its nice to find a place that can give you real stuff without costing a limb.</em></p></dd>
+                <dd><p><em>For a person with low income the cost of ...</em></p></dd>
                 <dd>&nbsp;</dd>
             </dl>
         </div>
