Added a link to homework 2.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
 
     <dl>
         <dt> Homework 1 : Created a small website for a fictional company that makes stone trees.</dt>
-        <dd> <strong> Skills: </strong> CSS, Javascript & HTML</dd>
+        <dd> <strong> Skills: </strong> Git, CSS, Javascript & HTML</dd>
         <dd> Information Page: <a href="HW1/index.html"> >>LINK<< </a></dd>
         <dd> Website: <a href="HW1/index_aoe.html"> >>LINK<< </a></dd>
-        <dt> <a href="tba"> Homework 2 </a></dt>
+        
+        <dt> Homework 2 : Created a searchable database for a list of characters.</dt>
+        <dd> <strong> Skills: </strong> Git, CSS, Javascript & HTML </dd>
+        <dd> Information Page: <a href="HW2/index.html"> >>LINK<< </a></dd>
+        <dd> Website: <a href="HW2/cis_database_CoA.html"> >>LINK<< </a></dd>
+        
         <dt> <a href="tba"> Homework 3 </a></dt>
         <dt> <a href="tba"> Homework 4 </a></dt>
         <dt> <a href="tba"> Homework 5 </a></dt>
