--- a/HW2/index.html
+++ b/HW2/index.html
@@ -8,8 +8,10 @@
 
 <body>
 <div class="container">
+<div class = "col-md-4">
 <h2>Homework 2: </h2> <small>Chronicles of Aether, Database</small>
-
+</div>
+<div class = "col-md-8">
     <p>The task for this assignment is to create an interactive Javascripting element on the page. It must be capable of taking input from the user and then displaying something on the page based on that input.</p>
     
     <h2> Git Branching </h2>
@@ -312,6 +314,6 @@
     <p>I also worked closely with my spouse, a talented graphic designer, to create the art elements of the web page as needed.</p>
     
 </div>
-
+</div>
 </body>
 </html>
