--- a/HW2/index.html
+++ b/HW2/index.html
@@ -4,9 +4,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Homework 2 </title>
-<link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css"/>
-<link href="css/bootstrap-grid.min.css" rel="stylesheet" type="text/css"/>
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<link href="style/bootstrap-grid.css" rel="stylesheet" type="text/css"/>
+<link href="style/bootstrap-grid.min.css" rel="stylesheet" type="text/css"/>
+<link href="style/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
