Added link to HW3 index and archive C files.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <dd> Information Page: <a href="HW2/index.html"> >>LINK<< </a></dd>
         <dd> Website: <a href="HW2/cis_database_CoA.html"> >>LINK<< </a></dd>
         
-        <dt> <a href="tba"> Homework 3 </a></dt>
-        <dt> <a href="tba"> Homework 4 </a></dt>
-        <dt> <a href="tba"> Homework 5 </a></dt>
+        <dt> Homework 3 : Translate a Java App into a C# app.</dt>
+        <dd> <strong> Skills: </strong> Git, C#, Visual Studio 2017 </dd>
+        <dd> Information Page: <a href="HW3/index.html"> >>LINK<< </a></dd>
+        <dd> C Files (Zip File): <a href="HW2/Calculator.zip"> >>LINK<< </a></dd>
+        
     </dl>
     </div>  
 </div>
