--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
     <p>I am a student of Western Oregon University, with a minor in business and a focus on commmunication. I also dabble in multimedia, webdesign and illustration art. </p>
 
+    <h2> The Repository</h2>
+    <p><a href="https://github.com/rsimpson15"> >>LINK<< </a></p>
+    
     <h2>The Assignments</h2>
 
     <dl>
