--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         
         <dt> Homework 6 : Adventure Works</dt>
         <dd> <strong> Skills: </strong> Git, C#, Linq, Visual Studio 2017 </dd>
-        <dd> Information Page: <a href="HW6/index.html"> >>LINK<< </a></dd>
+        <dd> Information Page: <a href="homework6/index.html"> >>LINK<< </a></dd>
         <dd> Site Link: <a href="homework6/homework6/Views/Product/Index.cshtml"> >>LINK<< </a></dd>
         
     </dl>
