Make images look nicer.

--- a/homework6/index.html
+++ b/homework6/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> Homework 5 </title>
+<title> Homework 6 </title>
 <link href="WebApplication2/css/bootstrap-grid.css" rel="stylesheet" type="text/css"/>
 <link href="WebApplication2/css/bootstrap-grid.min.css" rel="stylesheet" type="text/css"/>
 <link href="WebApplication2/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -202,11 +202,11 @@
         <p>For this projecct I am also required to show it working propperly so here are the screenshots for that: </p>
         
         <!--Screen Shots-->
-        <img src="homework6/Content/Images/index_start.PNG">
-        <img src="homework6/Content/Images/index_open.PNG">
-        <img src="homework6/Content/Images/browse_pagination.PNG">
-        <img src="homework6//Content/Images/details_start.PNG">
-        <img src="homework6/Content/Images/details_write.PNG">
+        <img src="homework6/Content/Images/index_start.PNG"> <br />
+        <img src="homework6/Content/Images/index_open.PNG"> <br />
+        <img src="homework6/Content/Images/browse_pagination.PNG"> <br />
+        <img src="homework6//Content/Images/details_start.PNG"> <br />
+        <img src="homework6/Content/Images/details_write.PNG"> <br />
         <img src="homework6/Content/Images/details_read.PNG">
     </div>
 </div>
