Updated index page for Project 7.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <dd> Information Page: <a href="homework6/index.html"> >>LINK<< </a></dd>
         <dd> Site Link: <a href="homework6/homework6/Views/Product/Index.cshtml"> >>LINK<< </a></dd>
         
+        <dt> Homework 7 : Giphy API Search</dt>
+        <dd> <strong> Skills: </strong> Git, C#, JSON, AJAX, Javascript, Visual Studio 2017 </dd>
+        <dd> Information Page: <a href="HW7/index.html"> >>LINK<< </a></dd>
+        <dd> Site Link: <a href="HW7/HW7/HW7/Views/Home/Index.cshtml"> >>LINK<< </a></dd>
+        
     </dl>
     </div>  
 </div>
