Updated main index for HW8 link.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         <dd> Information Page: <a href="HW7/index.html"> >>LINK<< </a></dd>
         <dd> Site Link: <a href="HW7/HW7/HW7/Views/Home/Index.cshtml"> >>LINK<< </a></dd>
         
+        <dt> Homework 8 : Artists Gallery</dt>
+        <dd> <strong> Skills: </strong> Git, C#, JSON, AJAX, Javascript, Visual Studio 2017 </dd>
+        <dd> Information Page: <a href="HW8/index.html"> >>LINK<< </a></dd>
+        <dd> Site Link: <a href="HW8/HW8/Views/Home/Index.cshtml"> >>LINK<< </a></dd>
+        
     </dl>
     </div>  
 </div>
