Updated main index for HW9

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
         <dd> Information Page: <a href="HW8/index.html"> >>LINK<< </a></dd>
         <dd> Site Link: <a href="HW8/HW8/Views/Home/Index.cshtml"> >>LINK<< </a></dd>
         
+        <dt> Homework 9 : Web Deployment</dt>
+        <dd> <strong> Skills: </strong> Azure, Visual Studio 2017 </dd>
+        <dd> Information Page: <a href="HW9/index.html"> >>LINK<< </a></dd>
+        <dd> Site Link: <a href="http://artistgallery.azurewebsites.net/"> >>LINK<< </a></dd>
+        
     </dl>
     </div>  
 </div>
